// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Images API Can not upload a file without extension 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Please select a valid image.",
      "property": null,
      "type": "UnsupportedMediaTypeError",
    },
  ],
}
`;

exports[`Images API Can not upload a json file 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Please select a valid image.",
      "property": null,
      "type": "UnsupportedMediaTypeError",
    },
  ],
}
`;

exports[`Images API Can not upload a json file with image file extension 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Please select a valid image.",
      "property": null,
      "type": "UnsupportedMediaTypeError",
    },
  ],
}
`;

exports[`Images API Can not upload a json file with image mime type 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Please select a valid image.",
      "property": null,
      "type": "UnsupportedMediaTypeError",
    },
  ],
}
`;

exports[`Images API Does not return HTTP 500 when image processing fails 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Image processing failed Image processing failed",
      "details": null,
      "ghostErrorCode": null,
      "help": "Please verify that the image is valid",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request not understood error, cannot upload image.",
      "property": null,
      "type": "BadRequestError",
    },
  ],
}
`;

exports[`Images API Does not try to delete non-existing file upon invalid request 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Please select an image.",
      "property": null,
      "type": "ValidationError",
    },
  ],
}
`;

exports[`Images API Errors when image request body is broken #2 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "The request could not be understood.",
      "property": null,
      "type": "BadRequestError",
    },
  ],
}
`;

exports[`Images API Errors when image request body is broken 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "LIMIT_UNEXPECTED_FILE",
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "The request could not be understood.",
      "property": null,
      "type": "BadRequestError",
    },
  ],
}
`;

exports[`Images API Errors when trying to upload invalid form body 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "The request could not be understood.",
      "property": null,
      "type": "BadRequestError",
    },
  ],
}
`;

exports[`Images API Errors when uploading an invalid SVG 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Please select a valid SVG image",
      "property": null,
      "type": "UnsupportedMediaTypeError",
    },
  ],
}
`;

exports[`Images API Errors when uploading an invalid zipped SVG 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": null,
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Please select a valid SVG image",
      "property": null,
      "type": "UnsupportedMediaTypeError",
    },
  ],
}
`;

exports[`Images API Will error when filename is too long 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": "ENAMETOOLONG",
      "context": "The request could not be understood.",
      "details": null,
      "ghostErrorCode": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Request not understood error, cannot upload image.",
      "property": null,
      "type": "BadRequestError",
    },
  ],
}
`;
